--- a/src/core.css
+++ b/src/core.css
@@ -1,9 +1,30 @@
 @critical;
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: monospace;
   margin: 0;
-  position: relative;
+  &::after {
+    border: 10px solid gold;
+    content: '';
+    display: block;
+    height: 100vh;
+    left: 0;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
+  }
 }
 
 a {
@@ -56,24 +77,19 @@ article img {
 }
 
 .wrapper {
-  border: 10px solid gold;
   color: #111;
-  flex-direction: column;
   font-size: 2em;
-  height: calc(100vh - 20px);
   line-height: 1.3;
-  overflow: scroll;
-  width: calc(100vw - 20px);
   @media (max-width: 700px) {
     font-size: 1.25em;
   }
 }
 
 .wrapperInner {
-  margin: 4em auto;
+  margin: 5.25em auto;
   max-width: 33em;
-  padding: 0 2em;
+  padding: 0 3.25em;
   @media (max-width: 700px) {
-    margin: 2em auto;
+    margin: 3.25em auto;
   }
 }
